REGRESSION(r110072): fast/forms/textfield-overflow.html is failing https://bugs.webkit.org/show_bug.cgi?id=80531

Reviewed by Ojan Vafai.

Source/WebCore:

Tested by fast/forms/textfield-overflow.html (re-enabled after this change).

The existing code would happily query layout information before calling layout (FTW!).
The solution is to properly layout our object, then modify some dimensions as needed while
marking ourself as needing layout and then layouting again.

* rendering/RenderTextControlSingleLine.cpp:
(WebCore::RenderTextControlSingleLine::layout):
Implemented a proper 2 pass layout algorithm. Removed the |relayoutChildren| logic as:
- layoutBlock handles automatically logical height changes.
- we were not modifying the logical width between layouts so we don't need to force a
child relayout in this case.

LayoutTests:

* platform/chromium-linux/fast/table/colspanMinWidth-vertical-expected.png:
* platform/chromium-win/fast/table/colspanMinWidth-vertical-expected.txt:
This is a progression. The <input> now takes the full cell's space instead of
being shrunk.

* platform/efl/Skipped:
* platform/efl/test_expectations.txt:
* platform/gtk/Skipped:
* platform/gtk/test_expectations.txt:
* platform/mac/Skipped:
* platform/qt/Skipped:
* platform/win/Skipped:
Re-enable fast/forms/textfield-overflow.html as it should be passing.
Also disabled colspanMinWidth-vertical.html on platforms without a rebaseline.

* platform/chromium/test_expectations.txt:
Ditto and marked fast/repaint/search-field-cancel.html as failing image only.


Canonical link: https://commits.webkit.org/99555@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112113 268f45cc-cd09-0410-ab3c-d52691b4dbfc